--- a/BUILD.gn
+++ b/BUILD.gn
@@ -290,7 +290,7 @@ copy("copy_node") {
     } else {
        node_dir = "$root_out_dir/../Release" + suffix
     }
-    sources = [ "$node_dir/node.dll", "$node_dir/node.dll.lib", "$node_dir/node.dll.exp" ]
+    sources = [ "$node_dir/node.dll", "$node_dir/node.dll.lib"]
     outputs = [ "$root_out_dir/{{source_file_part}}" ]
   }
 }
